typej/deployment/applications/tuwunel/coturn.stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: coturn
spec:
  replicas: 1
  serviceName: coturn
  selector:
    matchLabels:
      app: coturn
  template:
    metadata:
      labels:
        app: coturn
    spec:
      containers:
        - name: coturn
          image: coturn/coturn:4.9.0-alpine
          restartPolicy: always
          command:
            - "-c /config/coturn.conf"
          ports:
            - containerPort: 3478
              protocol: TCP
              name: turn-tcp
            - containerPort: 3478
              protocol: UDP
              name: turn-udp
            - containerPort: 5349
              protocol: TCP
              name: stun-tls
            - containerPort: 5349
              protocol: UDP
              name: stun-udp
            - containerPort: 49160
              protocol: UDP
              name: transport-udp-0
            - containerPort: 49161
              protocol: UDP
              name: transport-udp-1
            - containerPort: 49162
              protocol: UDP
              name: transport-udp-2
            - containerPort: 49163
              protocol: UDP
              name: transport-udp-3
            - containerPort: 49164
              protocol: UDP
              name: transport-udp-4
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          volumeMounts:
            - mountPath: /config/coturn.conf
              readOnly: true
              name: config
              subPath: coturn.conf
      volumes:
        - name: config
          secret:
            secretName: coturn
            items:
              - key: coturn.conf
                path: coturn.conf
