typej/deployment/applications/tuwunel/coturn.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coturn
spec:
  selector:
    app: coturn
  ports:
    - targetPort: 3478
      port: 3478
      protocol: TCP
      name: turn-tcp
    - targetPort: 3478
      port: 3478
      protocol: UDP
      name: turn-udp
    - targetPort: 5349
      port: 5349
      protocol: TCP
      name: stun-tls
    - targetPort: 5349
      port: 5349
      protocol: UDP
      name: stun-tls
    - targetPort: 49160
      port: 49160
      protocol: UDP
      name: transport-udp-0
    - targetPort: 49161
      port: 49161
      protocol: UDP
      name: transport-udp-1
    - targetPort: 49162
      port: 49162
      protocol: UDP
      name: transport-udp-2
    - targetPort: 49163
      port: 49163
      protocol: UDP
      name: transport-udp-3
    - targetPort: 49164
      port: 49164
      protocol: UDP
      name: transport-udp-4
  type: NodePort
