typej/deployment/applications/tuwunel/tuwunel.ingress-route-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: tuwunel
spec:
  entryPoints:
    - websecure
  routes:
    - services:
        - name: tuwunel-conduwuit
          port: 80
          tls: false
      match: HostSNI(`*`) # Matches all SNI hosts. mc-router will handle the routing based on the SNI host.
